@@ -506,6 +506,7 @@ exit 0
 - sqlite3: update encode/decode from sqlite-2.8.16.
 - add --xml popt alias for query modes.
 - remove _rpmdb now that python2.[34] are commonly available.
+- remove remnant -I/opt/local hacks, --prefix=/usr is recommended.
 
 * Sun Feb 13 2005 Jeff Johnson <jbj@jbj.org> 4.4.2-0.1
 - start 4.4.2 devel.
